# Noni

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .sops.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  PROGRESS.md  README.md  SPRINT.md  The 100-Point Production-Ready Deep.txt  ai slop assessment.txt  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.ai/: README.md
.clerk/: config.json
alembic/: env.py
backend/: .dockerignore  Dockerfile
docs/: AI_SELF_CHECK.md  changelog.md  deferred-decisions.md  email-to-kim-noni-readiness-v2.txt  email-to-kim-noni-readiness.txt  gotchas.md  infrastructure-setup.md  integrations-setup.md  library.md  staging-deploy.md  stripe-setup.md  supabase-setup.md  technical-debt-register.md
frontend/: .dockerignore  .env.example  .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vitest.config.ts
infra/: .env.example  .env.prod.sops.yaml  Makefile  README.md
scripts/: AutoDeploy.ps1  audit-fly-secrets.ps1  audit-sessions-table.ps1  auto_deploy.py  bootstrap.py  chaos-test.ps1  check_auth_header.py  check_axios.js  check_dependencies.py  check_envelope_pinned.py  check_jwt_decode.py  check_no_one.py  ci_auth_test.py  ci_whoami_contract.py  deploy-waf.ps1  direct_cloudflare_deploy.py  export_docs.sh  final_fix.ps1  fix_workflow_auto.py  k6-smoke.js  monitor-db-query-performance.ps1  (+5 more)
(+307 files in other folders)
